--- a/cs_module5/case_study/prototype/add-form-customer.html
+++ b/cs_module5/case_study/prototype/add-form-customer.html
@@ -177,7 +177,7 @@
                 </li>
               </ul>
             </div>
-            <form action="#" class="subscribe-form">
+            <form action="#" class="subscribe-form" style="background-color: #046056; box-shadow: none;">
               <div class="form-group d-flex">
                 <input
                   type="text"
