--- a/cs_module5/case_study/prototype/add-form-facilities.html
+++ b/cs_module5/case_study/prototype/add-form-facilities.html
@@ -242,7 +242,7 @@
                 </li>
               </ul>
             </div>
-            <form action="#" class="subscribe-form">
+            <form action="#" class="subscribe-form" style="background-color: #046056; box-shadow: none;">
               <div class="form-group d-flex">
                 <input type="text" class="form-control rounded-left" placeholder="Enter email address" />
                 <button type="submit" class="form-control submit rounded-right">
@@ -340,7 +340,7 @@
         </div>
       </div>
     </footer>
-    <script src="add-form-facilities.js"></script>
+    <script src="form-facilities.js"></script>
     <script src="js/jquery.min.js"></script>
     <script src="js/popper.js"></script>
     <script src="js/bootstrap.min.js"></script>
