--- a/cs_module5/case_study/prototype/customers.html
+++ b/cs_module5/case_study/prototype/customers.html
@@ -26,7 +26,7 @@
         <li><a href="facilities.html">Dịch vụ</a></li>
         <li><a href="">Đội ngũ</a></li>
         <li><a href="customers.html">Khách hàng</a></li>
-        <li><a href="">Dịch vụ đi kèm</a></li>
+        <li><a href="contract.html">Hợp đồng</a></li>
         </ul>
     </div>
     <div style="max-width:2000px;margin-top:70px">
