--- a/cs_module5/case_study/prototype/customers.html
+++ b/cs_module5/case_study/prototype/customers.html
@@ -123,6 +123,7 @@
                 </nav>
             </div>
         </div>
+      </div>
     </div>
     <footer class="footer-05" style="background-color: #046056;">
         <div class="container">
