--- a/cs_module5/case_study/prototype/add-form-contract.html
+++ b/cs_module5/case_study/prototype/add-form-contract.html
@@ -54,6 +54,14 @@
             <input type="text" name="contract-code" placeholder="" id="contract-code" />
           </div>
           <div class="item">
+            <label for="customers">Khách hàng</label>
+            <input type="text" name="customers" id="customers" />
+          </div>
+          <div class="item">
+            <label for="facilities">Dịch vụ</label>
+            <input type="text" name="facilities" id="facilities" />
+          </div>
+          <div class="item">
             <label for="start-date">Ngày bắt đầu</label>
             <input type="date" name="start-date" id="start-date" required />
           </div>
