--- a/cs_module5/case_study/public/index.html
+++ b/cs_module5/case_study/public/index.html
@@ -24,7 +24,7 @@
   </head>
   <body>
     <div id="root"></div>
-    
+    <script src="home.js"></script>
     <script src="js/jquery.min.js"></script>
     <script src="js/popper.js"></script>
     <script src="js/bootstrap.min.js"></script>
