--- a/cs_module5/case_study/public/index.html
+++ b/cs_module5/case_study/public/index.html
@@ -26,10 +26,10 @@
 
 <body>
   <div id="root"></div>
-  <script src="js/jquery.min.js"></script>
+  <!-- <script src="js/jquery.min.js"></script>
   <script src="js/popper.js"></script>
   <script src="js/bootstrap.min.js"></script>
-  <script src="js/main.js"></script>
+  <script src="js/main.js"></script> -->
 </body>
 
 </html>
